# bia-aligner

./: BIATraining.md  BiaDescription.md  ProjectHome.md  README  bia.client.cpp  cbuild.sh  confusionNet.h  defs.h  fertTable.h  iword.cpp  linkCluster.cpp  params.h  scoreTable.cpp  scoreTable.h  state.cpp  wlink.h
sample/corpus/: dev.en.0  dev.es  dev05.en.0  dev05.en.1  dev05.es  test.en.1  train.en
sample/model/: aligned.grow-diag-final-and
training/: assoScoreTable_int2word.pl  iword.cpp  iword.h  linkCluster.h  phrase.h  sentPair.cpp  wordScoreTable_int2word.pl
trunk/: CMakeLists.txt  Socket.h  alUnit.cpp  alUnit.h  bia.cpp  cbuild.sh  fertTable.cpp  iword.h  linkCluster.h  params.cpp  phrase.cpp  phrase.h  sentPair.cpp  sentPair.h  state.h  wlink.cpp
trunk/sample/: pb-bia.bash
trunk/sample/corpus/: dev.en.1  test.en.0  test.es  train.es
trunk/sample/model/: en.sblm
trunk/training/: CMakeLists.txt  alUnit.cpp  alUnit.h  assoScoreTable_from-snt.cpp  assoScoreTable_ibm12wda_wd.pl  assoScoreTable_score2cost-2.pl  defs.h  filter-model-given-input.pl  linkCluster.cpp  linkCosts.cpp  phrase.cpp  prune-assoScoreTable.cpp  sentPair.h  train-models.pl  word2int.pl
trunk/tuning/: bialign-smt-eval.pl
tuning/: clean-corpus-n-frac.perl  linkCluster2sentence.pl  spsa_fmin.pl  tune-model-weights.pl
wiki/: BIATraining.wiki  BiaDescription.wiki  PageName.wiki
